--- a/index.html
+++ b/index.html
@@ -205,65 +205,68 @@
         <div class="logo">
           <img src="images/logo.svg" alt="logo"/>
         </div>
-        <div class="localizacao">
-          <div class="marcador">
-            <img src="images/icon-location.svg" alt="icone localização"/>
+        <div class="contatos">
+
+          <div class="localizacao">
+            <div class="marcador">
+              <img src="images/icon-location.svg" alt="icone localização"/>
+            </div>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua
+            </p>
           </div>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua
-          </p>
-        </div>
-        <div class="contato">
-          <div class="icone">
-            <img src="images/icon-phone.svg" alt="icone telefone"/>
-            <p>+1-543-123-4567</p>
+          <div class="contato">
+            <div class="icone">
+              <img src="images/icon-phone.svg" alt="icone telefone"/>
+              <p>+1-543-123-4567</p>
+            </div>
+            <div class="icone">
+              <img src="images/icon-email.svg" alt="icone de email"/>
+              <p>example@fylo.com</p>
+            </div>
           </div>
-          <div class="icone">
-            <img src="images/icon-email.svg" alt="icone de email"/>
-            <p>example@fylo.com</p>
+          <div class="sobre-nos">
+            <ul>
+              <a href="#"
+                ><li></li>
+                About Us</a>
+              <a href="#"
+                ><li></li>
+                Jobs</a>
+              <a href="#"
+                ><li></li>
+                Press</a>
+              <a href="#"
+                ><li></li>
+                Blog</a>
+            </ul>
           </div>
-        </div>
-        <div class="sobre-nos">
-          <ul>
-            <a href="#"
-              ><li></li>
-              About Us</a>
-            <a href="#"
-              ><li></li>
-              Jobs</a>
-            <a href="#"
-              ><li></li>
-              Press</a>
-            <a href="#"
-              ><li></li>
-              Blog</a>
-          </ul>
-        </div>
-        <div class="contate-nos">
-          <ul>
-            <a href="#"><li></li>
-              Contact Us
-            
+          <div class="contate-nos">
+            <ul>
+              <a href="#"><li></li>
+                Contact Us
+              
+              </a>
+              <a href="#"><li></li>
+                Terms
+              </a>
+              <a href="#"><li></li>
+                Privacy
+              </a>
+            </ul>
+          </div>
+          <div class="social">
+            <a href="#" class="icone-facebook">
+              <i class="fa-brands fa-facebook-f"></i>
             </a>
-            <a href="#"><li></li>
-              Terms
+            <a href="#" class="icone-twitter">
+              <i class="fa-brands fa-twitter"></i>
             </a>
-            <a href="#"><li></li>
-              Privacy
+            <a href="#" class="icone-instagram">
+              <i class="fa-brands fa-instagram"></i>
             </a>
-          </ul>
-        </div>
-        <div class="social">
-          <a href="#" class="icone-facebook">
-            <i class="fa-brands fa-facebook-f"></i>
-          </a>
-          <a href="#" class="icone-twitter">
-            <i class="fa-brands fa-twitter"></i>
-          </a>
-          <a href="#" class="icone-instagram">
-            <i class="fa-brands fa-instagram"></i>
-          </a>
+          </div>
         </div>
       </footer>
     </body>
